--- a/Family/Family.csproj
+++ b/Family/Family.csproj
@@ -62,10 +62,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddFamilyActivity.cs" />
+    <Compile Include="ChildDatabase.cs" />
     <Compile Include="FamilyAdapter.cs" />
     <Compile Include="FamilyDatabase.cs" />
     <Compile Include="MainActivity.cs" />
-    <Compile Include="Model\FamilyDetails.cs" />
+    <Compile Include="Model\ChildData.cs" />
+    <Compile Include="Model\FamilyDetail.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateFamily.cs" />
@@ -109,6 +111,9 @@
   <ItemGroup>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.8.116</Version>
+    </PackageReference>
+    <PackageReference Include="SQLiteNetExtensions">
+      <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.AppCompat" Version="1.2.0.5" />
     <PackageReference Include="Xamarin.AndroidX.ConstraintLayout">
